--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 	    <div id="container"></div>
-		<script src="js/p5.min.js"></script>
-		<script type="module" src="js/index.js"></script>
+		<script src="p5.min.js"></script>
+		<script type="module" src="index.js"></script>
 	</body>
 </html>
